--- a/docs/validators/manage/change-commission.mdx
+++ b/docs/validators/manage/change-commission.mdx
@@ -1,6 +1,6 @@
 ---
-title: Change commission rate
-description: Set a different commission rate.
+title: Change commission
+description: Increase or decrease your commission rate.
 ---
 
 import stepOne from './assets/change-commission-step-1.png';
@@ -10,7 +10,7 @@ import stepThree from './assets/change-commission-step-3.png';
 When signing up as a validator on Ronin, you were asked to set a commission rate, which is the percentage of the block reward
 you receive before distributing the rest to your delegators.
 
-You can change this commission rate in your profile.
+You can change the commission rate in your profile:
 
 1. Open the [Validator Dashboard](https://validator.roninchain.com), then go to your account, and then click **Commission rate**.
    <img src={stepOne} width={280} />
@@ -18,6 +18,8 @@ You can change this commission rate in your profile.
 2. Enter the new commission rate in the range of 0-20%, and set the date when it takes effect. This date must be at least seven days from now.
    <img src={stepTwo} width={400} />
 
-After you save the new rate, users will see a clock icon next to your current rate, indicating that a change is pending.
+3. Confirm the change.
+
+After you confirm the new rate, users will see a clock icon next to your current rate, indicating that a change is pending.
 
 <img src={stepThree} width={280} />
