--- a/docs/validators/manage/claim-rewards.mdx
+++ b/docs/validators/manage/claim-rewards.mdx
@@ -20,24 +20,23 @@ Staking reward is calculated each period (approximately one day)
 and displayed as “claimable rewards”. 
 You need to claim this reward manually.
 
-1. Go to [Validator Dashboard](https://validator.roninchain.com) >
-**My Staking** > **Claim all**.
-<img src={stepOne} width={1280} />
+1. Open the [Validator Dashboard](https://validator.roninchain.com), then select
+**My Staking**, and then click **Claim all**.
+   <img src={stepOne} width={1280} />
 
-2. Select **Claim now**.
-<img src={stepTwo} width={400} />
+2. Click **Claim now**.
+   <img src={stepTwo} width={400} />
 
 3. Confirm the transaction.
-<img src={confirmTransaction} width={400} />
+   <img src={confirmTransaction} width={400} />
 
 After the transaction is confirmed, the reward is credited to your wallet.
 
 ## Claim commission and fast finality rewards
 
-You don't need to claim commission and fast finality reward
+You don't need to claim commission and fast finality rewards
 because they are transferred to you automatically
-in the end of each period (approximately one day). 
+at the end of each period (approximately one day). 
 
-You can, however, keep track of these rewards in
-[Validator Dashboard](https://validator.roninchain.com) >
-**My Staking** > **Activities**.
+You can, however, keep track of these rewards in **Validator Dashboard >
+My Staking > Activities**.
