--- a/docs/validators/manage/finality-vote-key.mdx
+++ b/docs/validators/manage/finality-vote-key.mdx
@@ -81,7 +81,7 @@ BLS proof #0: {redacted}
 3. Paste your BLS public key and the proof of posession.
    <img src={addStepTwo} width={400} />
 
-4. Save the changes.
+4. Save the change and confirm the transaction.
 
 ## Change your finality vote key {#change}
 
@@ -94,7 +94,7 @@ BLS proof #0: {redacted}
 3. Paste your new BLS public key and the proof of posession.
    <img src={editStepTwo} width={400} />
 
-4. Save the changes.
+4. Save the change and confirm the transaction.
 
 :::info[Cooldown period]
 After changing your admin address or fast finality vote key, there's a 24-hour cooldown period. During this time, you won't be able to modify either value until 24 hours after the last change.
