--- a/docs/validators/manage/renounce-role.mdx
+++ b/docs/validators/manage/renounce-role.mdx
@@ -3,28 +3,21 @@ description: Renounce your validator role.
 title: Renounce your role
 ---
 
-import StepOne from './assets/renounce-step-1.png';
-import StepTwo from './assets/renounce-step-2.png';
+import renounceStepOne from './assets/renounce-step-1.png';
+import renounceStepTwo from './assets/renounce-step-2.png';
 
 If you're a Standard Validator or Validator Candidate, 
-follow this guide to renounce your validator role. If you’re a Governing Validator, contact 
-the Sky Mavis team.
+follow this guide to renounce your validator role. If you’re a Governing Validator, contact Sky Mavis for instructions.
 
-1. Go to [Validator Dashboard](https://validator.roninchain.com) >
-your account > **Renounce**.
-<img src={StepOne} width={280} />
+1. Open the [Validator Dashboard](https://validator.roninchain.com), then select your account, and then click **Renounce**.
+   <img src={renounceStepOne} width={280} />
 
 2. Confirm your decision. Keep in mind that renunciation
 is permanent and cannot be undone.
-<img src={StepTwo} width={500} />
+   <img src={renounceStepTwo} width={500} />
 
 3. Click **Renounce** to submit the request.
 
-:::caution
-After sumbitting the request, you need to wait seven days for
-renunciation to take effect. To avoid slashing, keep your node
-online and up to date during this period.
-:::
-
-Your commission, bridge reward, staking reward, and the remaining
-self-stake is transferred to you on the date of renunciation.
+After submitting the request, wait seven days for the renunciation to take effect. To avoid slashing, keep your node online and up to date during this period.
+Your commission, bridge rewards, staking rewards, and the remaining
+self-stake will be transferred to you on the date of renunciation.
