--- a/docs/validators/manage/take-emergency-exit.mdx
+++ b/docs/validators/manage/take-emergency-exit.mdx
@@ -12,14 +12,14 @@ If you find that your node is compromised, such as when your private keys are st
 
 ## Submit your request
 
-1. Go to [Validator Dashboard](https://validator.roninchain.com) > your account > **Emergency exit**.
-<img src={exit} width={280} />
+1. Open the [Validator Dashboard](https://validator.roninchain.com), then select your account, and then click **Emergency exit**.
+   <img src={exit} width={280} />
 
 2. Read through the terms and then click **Submit request**.
-<img src={stepOne} width={500} />
+   <img src={stepOne} width={500} />
 
-3. After your request is submitted, provide evidence of the attack to the Governing Validators in the [validator-chat](https://discord.com/channels/930892666705694800/1090764739858153553) channel on Ronin Discord.
-<img src={stepTwo} width={500} />
+3. After your request is submitted, provide evidence of the attack to the Governing Validators in the [#validator-chat](https://discord.com/channels/930892666705694800/1090764739858153553) channel on Ronin Discord.
+   <img src={stepTwo} width={500} />
 
 ## Result
 
