--- a/docs/validators/manage/view-activity.mdx
+++ b/docs/validators/manage/view-activity.mdx
@@ -5,9 +5,7 @@ title: View activity
 
 import activity from './assets/activity.png';
 
-View your activity, such as staking operations,
-reward claims, and reward distributions, on
-[Validator Dashboard](https://validator.roninchain.com/) >
-**My Staking** > **Activities**.
+To view your activity, such as staking operations,
+reward claims, and reward distributions, open the [Validator Dashboard](https://validator.roninchain.com), then select **My Staking**, then open the **Activities** tab.
 
 <img src={activity} width={1280} />
