--- a/docs/validators/manage/view-analytics.mdx
+++ b/docs/validators/manage/view-analytics.mdx
@@ -5,8 +5,7 @@ title: View analytics
 
 import analytics from './assets/analytics.png';
 
-View analytics about the rewards you earned and the blocks you
-produced over different periods on [Validator Dashboard](https://validator.roninchain.com/) >
-**My Staking** > **Analytics**.
+To view analytics about the rewards you earned and the blocks you
+produced over different periods, open the [Validator Dashboard](https://validator.roninchain.com), then select **My Staking**, then open the **Analytics** tab.
 
 <img src={analytics} width={1280} />
