--- a/docs/validators/manage/view-profile.mdx
+++ b/docs/validators/manage/view-profile.mdx
@@ -8,7 +8,8 @@ import standardProfile from './assets/standard-validator-profile.png';
 import governorProfile from './assets/governing-validator-profile.png';
 
 Your validator profile is where you can view and modify the addresses linked to your validator account.
-To access your profile, go to [Validator Dashboard](https://validator.roninchain.com) and click **My profile**.
+
+To access your profile, open the [Validator Dashboard](https://validator.roninchain.com), then select your account, and then click **My profile**.
 
 <img src={profile} width={280} />
 
