--- a/docs/validators/manage/increase-withdraw-stake.mdx
+++ b/docs/validators/manage/increase-withdraw-stake.mdx
@@ -10,24 +10,23 @@ import withdrawStepOne from './assets/withdraw-stake-step-1.png';
 import withdrawStepTwo from './assets/withdraw-stake-step-2.png';
 import withdrawConfirmTransaction from './assets/confirm-transaction.png';
 
-## Introduction
+## Overview
 
 This page demonstrates how to increase or withdraw your self-stake after becoming a validator.
 
 ## Stake more
 
-1. Go to [Validator Dashboard](https://validator.roninchain.com/) >
-**My Staking** > **Stake more**.
-<img src={increaseStepOne} width={1280} />
+1. Open the [Validator Dashboard](https://validator.roninchain.com), then select **My Staking**, and then click **Stake more**.
+   <img src={increaseStepOne} width={1280} />
 
 2. Enter the amount manually or choose **Max** to stake all available RON,
 and then select **Stake**. The estimated reward is
 calculated based on your estimated APR (annual percentage rate),
 so you can see how much RON returns from this stake.
-<img src={increaseStepTwo} width={400} />
+   <img src={increaseStepTwo} width={400} />
 
 3. Confirm the transaction.
-<img src={increaseConfirmTransaction} width={400} />
+   <img src={increaseConfirmTransaction} width={400} />
 
 After the transaction is confirmed, you can review its details
 on the **Activities** tab or check the status in
@@ -45,16 +44,15 @@ as a validator in the days after, depending on how much others
 have staked.
 :::
 
-1. Go to [Validator Dashboard](https://validator.roninchain.com/) >
-**My Staking** > expand the options > **Withdraw**.
-<img src={withdrawStepOne} width={1280} />
+1. Open the [Validator Dashboard](https://validator.roninchain.com), then select **My Staking**, expand the options, and then click **Withdraw**.
+   <img src={withdrawStepOne} width={1280} />
 
 2. Enter the amount manually or choose **Max** to withdraw the
 entire stake, and then select **Withdraw**.
-<img src={withdrawStepTwo} width={400} />
+   <img src={withdrawStepTwo} width={400} />
 
 3. Confirm the transaction.
-<img src={withdrawConfirmTransaction} width={400} />
+   <img src={withdrawConfirmTransaction} width={400} />
 
 After the transaction is confirmed, you can review its details on the
 **Activities** tab or check the status in
