feat: separate guide for early exit; refactor URLs

--- a/docs/delegators/manage/claim-rewards.mdx
+++ b/docs/delegators/manage/claim-rewards.mdx
@@ -47,7 +47,7 @@ the next day.
 
 Instead of claiming the RON staking rewards to your Ronin Wallet, you can restake them to your favorite validator, which will increase your staking power.
 
-1. In the **CLAIMABLE REWARDS** secttion, click **Restake**.
+1. In the **CLAIMABLE REWARDS** section, click **Restake**.
    <img src={restakeStepOne} width={1440} />
 
 2. Select the validator to whom you want to restake the RON, then click **Restake**. You can select an existing validator with whom you already stake, or choose a new validator.
@@ -60,4 +60,4 @@ After the transaction is confirmed, you succefully restaked your RON rewards.
 
 ## See also
 
-[Increase, withdraw, or move your stake](manage-stake.mdx)
+[Increase, withdraw, or move your stake](stake.mdx)
