--- a/docs/delegators/manage/validators.mdx
+++ b/docs/delegators/manage/validators.mdx
@@ -1,6 +1,6 @@
 ---
-description: Keep track of updates among your validators.
-title: Track your validators
+description: Keep track of changes among the validators you staked with.
+title: Keep track of validators
 ---
 
 import totalStakeStats from '../assets/total-stake-stats.png'
