--- a/docs/validators/manage/renounce.mdx
+++ b/docs/validators/manage/renounce.mdx
@@ -1,13 +1,13 @@
 ---
-description: Renounce your validator role.
-title: Renounce your role
+description: Renounce your Ronin validator role.
+title: Renounce validator role
 ---
 
 import renounceStepOne from './assets/renounce-step-1.png';
 import renounceStepTwo from './assets/renounce-step-2.png';
 
 If you're a Standard Validator or Validator Candidate, 
-follow this guide to renounce your validator role. If you’re a Governing Validator, contact Sky Mavis for instructions.
+follow this guide to renounce your validator role. Governing Validators should reach out to Sky Mavis for further steps.
 
 1. Open the [Validator Dashboard](https://validator.roninchain.com), then select your account, and then click **Renounce**.
    <img src={renounceStepOne} width={280} />
