--- a/docs/validators/manage/emergency-exit.mdx
+++ b/docs/validators/manage/emergency-exit.mdx
@@ -1,6 +1,5 @@
 ---
-title: Request an emergency exit
-sidebar_label: Take emergency exit
+title: Request emergency exit
 description: Request an emergency exit if your node is compromised.
 ---
 
@@ -8,24 +7,24 @@ import exit from './assets/emergency-exit.png';
 import stepOne from './assets/request-exit.png';
 import stepTwo from './assets/submit-exit.png';
 
-If you find that your node is compromised, such as when your private keys are stolen, you may be under attack and at risk of [slashing](./../slashing.mdx). When you suspect that you're being targeted, you can request an emergency exit to protect your node and prevent damage.
+If you discovered that your node is compromised, such as when your private keys are stolen, you may be under attack and at risk of [slashing](./../slashing.mdx). When you suspect that you're being targeted, you can request an emergency exit to protect your node and prevent damage.
 
 ## Submit your request
 
 1. Open the [Validator Dashboard](https://validator.roninchain.com), then select your account, and then click **Emergency exit**.
    <img src={exit} width={280} />
 
-2. Read through the terms and then click **Submit request**.
+2. Agree to the terms and submit the request
    <img src={stepOne} width={500} />
 
-3. After your request is submitted, provide evidence of the attack to the Governing Validators in the [#validator-chat](https://discord.com/channels/930892666705694800/1090764739858153553) channel on Ronin Discord.
+3. Submit evidence of the attack to the Governing Validators in the [#validator-chat](https://discord.com/channels/930892666705694800/1090764739858153553) channel on Ronin Discord.
    <img src={stepTwo} width={500} />
 
 ## Result
 
-Based on the Governing Validators' vote on your Emergency Exit proposal, your stake may be refunded as follows:
+Based on the Governing Validators' vote on your proposal, your stake may be refunded as follows:
 
 * If the proposal's approved, your entire self-stake is refunded: 50,000 RON is credited immediately, while the remaining amount is transferred to you the next day (00:00 UTC).
 * If the proposal's not approved or expires, you're refunded the amount equal to your self-stake minus 50,000 RON. The amount is transferred to you after seven working days from the proposal's creation date.
 
-After your emergency exit is complete, you can no longer validate transactions on Ronin and receive rewards. Your status is set to "Renounced."
+After the emergency exit is complete, you'll no longer be able to confirm blocks on Ronin and receive rewards. Your status will be set to "Renounced."
