--- a/docs/validators/manage/view-profile.mdx
+++ b/docs/validators/manage/view-profile.mdx
@@ -19,14 +19,14 @@ your profile contains the following addresses:
 <img src={standardProfile} width={400} />
 
 * **Admin address.** The address used to manage your profile and 
-staking activities, and to claim rewards. You can change this address. For more information, see [Change your admin address](address.mdx#admin).
+staking activities, and to claim rewards. You can change this address. For more information, see [Change your admin address](addresses.mdx#admin).
 * **Validator address.** The address used for producing blocks. 
 This address is displayed to delegators and also called “consensus address”.
 * **Bridge operator address.** The address used for operating
 [Ronin Bridge](https://bridge.roninchain.com/).
 * **Bridge governor address.** The address used to vote on changes to the bridge, such as pausing the bridge or adding bridge operators.
-* **Finality vote key.** This is the [cryptographic key](finality-vote-key.mdx) used to vote
-for blocks in the fast finality mechanism. You can change this key. For more information, see [Change your finality vote key](finality-vote-key.mdx#change).
+* **Finality vote key.** This is the [cryptographic key](finality.mdx) used to vote
+for blocks in the fast finality mechanism. You can change this key. For more information, see [Change your finality vote key](finality.mdx#change).
 
 If you’re a Governing Validator, your profile has an additional **Governing validator address,** used to 
 [create proposals](./../governance/create-proposal.mdx) and
