--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -1,6 +1,6 @@
 ---
-description: Register as a Validator Candidate.
-title: Register as a validator
+description: Register as a validator on Ronin.
+title: Become a validator
 ---
 
 import becomeValidator from './assets/become-validator.png';
@@ -56,7 +56,7 @@ It's also highly recommended that you read the
 5. Provide the initial stake of RON.
 <img src={stepFour} width={1280} />
 
-6. Enter your fast finality vote key—see [Add or change finality vote key](../manage/finality-vote-key.mdx) for details.
+6. Enter your fast finality vote key—see [Add or change finality vote key](../manage/finality.mdx) for details.
 <img src={stepFive} width={1280} />
 
 Congratulations, you're now a Validator Candidate.
