--- a/docs/validators/manage/maintenance.mdx
+++ b/docs/validators/manage/maintenance.mdx
@@ -5,8 +5,10 @@ description: Plan a maintenance period for your node.
 
 import stepOne from './assets/schedule-maintenance-step-1.png';
 import stepTwo from './assets/schedule-maintenance-step-2.png';
+import ongoingMaintenance from './assets/maintenance-ongoing.png';
+import upcomingMaintenance from './assets/maintenance-upcoming.png';
 
-Sometimes, you need to take your node offline for maintenance. You can schedule a maintenance period in advance to let other users know when your node will be down. Because up to three validators can enter maintenance at the same time, you may need to align with the other validators to avoid schedule overlaps. After the maintenance ends, you'll need to wait at least three days before scheduling the next one.
+Sometimes, you need to take your node offline for maintenance. You can schedule a maintenance period in advance to let other users know when your node will be down. Because only up to three validators can schedule maintenance at the same time, you may need to align with the other validators to avoid schedule overlaps. After the maintenance ends, you'll need to wait at least three days before scheduling the next one.
 
 1. Open the [Validator Dashboard](https://validator.roninchain.com), then select your account, and then click **Maintenance mode**.
    <img src={stepOne} width={280} />
@@ -17,3 +19,6 @@ You can choose from the valid start epoch, then decide on the end epoch.
 
 3. After you submit the request, the system will display the status
 and duration of the maintenance period.
+   <img src={upcomingMaintenance} width={280} />
+   <p> </p>
+   <img src={ongoingMaintenance} width={280} />
