--- a/docs/apps/katana/overview.mdx
+++ b/docs/apps/katana/overview.mdx
@@ -19,6 +19,12 @@ Katana ([katana.roninchain.com](https://katana.roninchain.com)) is a decentraliz
 * Farm: Stake liquidity pool (LP) tokens to farm RON.
 * Analytics: Check your earned fees.
 
-## Get started
+## Set up your account
 
-If you're new to Katana, follow the [Get started](./guides/get-started.mdx) guide to set up your account and learn the basics.
+To set up your account and learn the basics of Katana, follow the [Get started](./guides/get-started.mdx) guide.
+
+## Guides
+
+* [Swap](./guides/swap.mdx)
+* [Pool](./guides/pool.mdx)
+* [Farm](./guides/farm.mdx)
