feat: add screenshots to Pool

--- a/docs/apps/katana/guides/swap.mdx
+++ b/docs/apps/katana/guides/swap.mdx
@@ -1,5 +1,6 @@
 ---
 description: Trade one token for another on Katana DEX.
+slug: /apps/katana/swap
 title: Swap
 ---
 
@@ -26,7 +27,7 @@ Katana DEX is an Automated Market Maker (AMM). This means it's always ready to b
     <img src={swapToList} width={1000} />
     After choosing the swap pair, you can see the tokens listed on the **Swap** panel. The top token is the token you have in your wallet. The bottom token is the one you want to swap your token with.
 3. Enter the amount to swap: when you type in on one of the fields, the other populates based on the current exchange rate between the tokens.
-4. Optionally, switch the top and bottom tokens.
+4. Optionally, switch the top and bottom tokens by clicking the arrow down sign (↓) between the tokens.
 5. When you are ready to swap, click the **Swap** button.
     <img src={swapTo} width={1000} />
 6. In the **Confirm Swap** pop-up, review the details of your swap:
@@ -49,7 +50,3 @@ After a few seconds, your transaction is confirmed. You can see a banner appear 
 <img src={swapCompleted} width={1000} />
 
 Congratulations. You just swapped your tokens.
-
-## Video guide
-
-<iframe width="912" height="513" src="https://www.youtube.com/embed/84H2XJjvSlE" title="Katana Swap Tutorial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
