--- a/docs/basics/acquire-ron.mdx
+++ b/docs/basics/acquire-ron.mdx
@@ -16,7 +16,7 @@ There are several ways to purchase RON and other tokens on Ronin. You can purcha
 To store, trade, and receive the RON token you need a cryptocurrency wallet that supports the Ronin blockchain — Ronin Wallet.
 For setup instructions, see [Get started with the Ronin Wallet mobile app](https://support.roninchain.com/hc/en-us/articles/14037076528283-Getting-Started-on-Ronin-Mobile-Wallet).
 
-## Purchase RON through a CEX
+## Acquire RON from a CEX
 
 A CEX is a business that allows you to buy RON
 with traditional currency. After purchasing RON from a CEX, you can then send it back to your Ronin Wallet to enjoy
@@ -26,6 +26,7 @@ geographical locations, and applicable fees differ among exchanges.
 Here's a list of exchanges that support RON:
 
 * [Binance](https://www.binance.com/)
+* [Coinbase](https://www.coinbase.com/)
 * [OKX](https://www.okx.com/)
 * [Crypto.com](https://crypto.com/exchange/trade/spot/RONIN_USD)
 * [Gate.io](https://www.gate.io/trade/RON_USDT)
@@ -38,7 +39,7 @@ Are you a centralized exchange looking to list RON? If so, send us an email at
 [hello@roninchain.com](mailto:hello@roninchain.com).
 :::
 
-## Purchase RON through On-ramp providers
+## Acquire RON from On-ramp providers
 
 Ronin has the following official On-ramp partners:
 
@@ -52,7 +53,7 @@ You can purchase RON either in the Ronin Wallet mobile app or in your browser:
 
 <img src={purchaseSite} width={1280} />
 
-## Purchase RON using Katana DEX
+## Acquire RON using Katana
 
 Katana ([katana.roninchain.com](https://katana.roninchain.com/)) is the official DEX supported on Ronin. 
 It allows you to exchange RON for other tokens in the Ronin ecosystem (such as AXS and SLP) using existing
@@ -61,15 +62,10 @@ contracts, which means there are fewer geographical restrictions.
 
 <img src={katanaSite} width={1280} />
 
-To use Katana, you need to acquire funds on Ronin. You can do that by either withdrawing from a CEX into Ronin, or by transferring from Ethereum to Ronin using Ronin Bridge. 
+To use Katana, you need to acquire digital assets on Ronin. There are two ways to do that:
 
-:::note
-The Ronin Bridge method requires that you already have funds on the Ethereum blockchain.
-:::
-
-For more information on using Ronin Bridge, see this video tutorial:
-
-<div class='embed-container'><iframe src='https://www.youtube.com/embed/cGLnULpBtC4' frameborder='0' allowfullscreen></iframe></div>
+* Withdraw your assets from a CEX, such as Binance or Coinbase, to Ronin.
+* Transfer your assets from Ethereum to Ronin using Ronin Bridge. For more information, see [Deposit ERC20 tokens using Ronin Bridge](../apps/ronin-bridge/guides/deposit-token.md).
 
 ## See also
 
