feat: clarify who can run a bridge

--- a/docs/get-started.mdx
+++ b/docs/get-started.mdx
@@ -1,5 +1,5 @@
 ---
-description: Learn how to use the Ronin chain and its dApps, stake RON, run a validator node or a bridge operator node, and more.
+description: Learn how to use the Ronin chain and its dApps, stake RON, run a validator or bridge node, and more.
 sidebar_label: Get started
 title: Documentation map
 ---
@@ -50,7 +50,7 @@ Stake RON to earn staking rewards, claim or restake rewards, and more.
 
 ## Run a validator node
 
-Run a validator node, register as a validator, claim rewards, and manage your validator account.
+Run a validator node, claim rewards, and manage your account.
 
 <DocCardList items={[
     findSidebarItem('/validators/setup/overview'),
@@ -61,9 +61,9 @@ Run a validator node, register as a validator, claim rewards, and manage your va
     findSidebarItem('/validators/validator-faq'),
     ]} />
 
-## Run a bridge operator node
+## Run a bridge node
 
-Run a bridge operator node, propose and vote on changes to the bridge.
+Run a bridge node, propose and vote on changes to the bridge.
 
 <DocCardList items={[
     findSidebarItem('/bridge-operators/setup/overview'),
