--- a/docs/validators/slashing.mdx
+++ b/docs/validators/slashing.mdx
@@ -131,7 +131,7 @@ The validator's status is set to **Punished**.
 ### Multiple slashes
 
 Validators might experience multiple concurrent slashes if they have issues
-with both their validator node and bridge operator node, and the relaying
+with both their validator node and bridge node, and the relaying
 responsibilities of the Governing Validator.
 
 ## Bailout
