--- a/docs/bridge-operators/index.mdx
+++ b/docs/bridge-operators/index.mdx
@@ -1,16 +1,16 @@
 ---
 title: Bridge operators
-description: Learn how to run a bridge operator, participate in governance, and more.
+description: Learn how to run a bridge node, participate in governance, and more.
 ---
 
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-## Run a bridge operator
+## Run a bridge node
 
 <DocCardList items={[
-    findSidebarItem('/bridge-operators/setup/run-bridge-operator'),
-    findSidebarItem('/bridge-operators/setup/upgrade-bridge-operator'),
+    findSidebarItem('/bridge-operators/setup/run-bridge'),
+    findSidebarItem('/bridge-operators/setup/upgrade-bridge'),
     ]} />
 
 ## Slashing for bridge operators
